--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /DJSolutions/index.php?url=$1 [QSA,L]
+RewriteRule ^(.*)$ /solution-php/index.php?url=$1 [QSA,L]
