Edit composer.json and Config Router

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
     "autoload": {
         "psr-4": {
             "Core\\": "Core/",
-            "Database\\": "Database/"
+            "Database\\": "Database/",
+            "Controllers\\": "App/Controllers",
+            "Models\\": "App/Models",
+            "Security\\": "App/Security"
         }
     }
 }
