--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "danieljuniorce@hotmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "vlucas/phpdotenv": "^3.3"
+    },
     "autoload": {
         "psr-4": {
             "Core\\": "Core/",
