--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 SECRET_KEY =
+HOST= 'localhost/solutions-php/'
 
 #CONNECT DB
-DB_HOST =
-DB_NAME =
-DB_USER =
-DB_PASS = 
+DB_DRIVER = 'mysql'
+DB_HOST = 'localhost'
+DB_NAME = 'dbteste'
+DB_USER = 'root'
+DB_PASS = ''
+DB_CHARSET = 'utf8'
+DB_COLLATION = 'ut8_unicode_ci'
+DB_PREFIX = ''
