Fixed Files and Router

--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
     },
     "autoload": {
         "psr-4": {
-            "Core\\": "Core/",
-            "Database\\": "Database/",
-            "Controllers\\": "App/Controllers/",
-            "Models\\": "App/Models/",
-            "Security\\": "App/Security/"
+            "Core\\": "core/",
+            "Database\\": "database/",
+            "Controllers\\": "app/Controllers/",
+            "Models\\": "app/Models/",
+            "Security\\": "app/Security/"
         }
     }
 }
