--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 SECRET_KEY =
-HOST= 'localhost/solutions-php/'
+HOST= ''
 
 #CONNECT DB
-DB_DRIVER = 'mysql'
-DB_HOST = 'localhost'
-DB_NAME = 'dbteste'
-DB_USER = 'root'
+DB_DRIVER = ''
+DB_HOST = ''
+DB_NAME = ''
+DB_USER = ''
 DB_PASS = ''
