--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
-SECRET_KEY =
-HOST= ''
-
 #CONNECT DB
-DB_DRIVER = ''
-DB_HOST = ''
-DB_NAME = ''
-DB_USER = ''
-DB_PASS = ''
+DB_DRIVER = 'mysql or pgsql'
+DB_HOST = 'localhost'
+DB_NAME = 'orm'
+DB_USER = 'root'
+DB_PASS = 'secret'
