--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,11 @@
     ],
     "require": {
         "illuminate/database": "^5.8",
-        "symfony/dotenv": "^4.2"
+        "vlucas/phpdotenv": "^3.3"
     },
     "autoload": {
         "psr-4": {
+            "Star\\": "star/",
             "Star\\Core\\": "star/Core/",
             "Database\\": "database/",
             "Controllers\\": "app/Controllers/",
