--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     "require": {
         "illuminate/database": "^5.8",
         "vlucas/phpdotenv": "^3.3",
-        "symfony/console": "^4.2"
+        "symfony/console": "^4.2",
+        "saaiph/router": "dev-master",
+        "saaiph/dotenv": "^1.0"
     },
     "autoload": {
         "psr-4": {
