--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "illuminate/database": "^5.8",
         "vlucas/phpdotenv": "^3.3",
         "symfony/console": "^4.2",
-        "saaiph/router": "dev-master",
-        "saaiph/dotenv": "^1.0"
+        "saaiph/router": "dev-master"
     },
     "autoload": {
         "psr-4": {
